--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 :root {
   --primary: #022549;
   --secondary: #21d07a;
@@ -9,7 +8,7 @@ body {
   font-family: "league spartan", sans-serif;
   padding: 0;
   margin: 0;
-  background-color:black	;
+  background-color: black;
 }
 
 .container {
@@ -45,7 +44,7 @@ body {
 
 .btn {
   padding: 8px 15px;
-  background-color:#fff;
+  background-color: #fff;
   color: black;
   border-radius: 10px;
   text-transform: uppercase;
@@ -54,11 +53,9 @@ body {
   border: none;
   font-size: 1rem;
   transition: all 0.3s ease;
-  line-height:1.5;
-  margin:0.5rem;
+  line-height: 1.5;
+  margin: 0.5rem;
 }
-
-
 
 .btn:hover {
   background-color: grey;
@@ -77,7 +74,7 @@ input:focus {
 
 /* Header Styles */
 header {
-  background-color: var(--primary)		;
+  background-color: var(--primary);
   border-radius: 3px;
 }
 
@@ -90,7 +87,7 @@ header .inner-content {
 
 header a {
   color: #fff;
-  font-size: 1.40rem;
+  font-size: 1.4rem;
   text-decoration: none;
   transition: all 0.3s ease;
 }
@@ -168,18 +165,16 @@ header .nav-links li:last-child {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding-left:1.5rem;
+  padding-left: 1.5rem;
 }
 
 .result-card .info .title {
   font-size: 1.25rem;
-  padding-bottom:0.5rem;
+  padding-bottom: 0.5rem;
   color: #fff;
   font-weight: 600;
   margin: 0;
 }
-
-
 
 .result-card .info .release-date {
   font-size: 1.25rem;
@@ -239,12 +234,9 @@ header .nav-links li:last-child {
 .movie-card img {
   width: 100%;
   display: block;
-  
 }
 
-
-
-.movie-card:hover  {
+.movie-card:hover {
   opacity: 0.7;
   cursor: pointer;
 }
@@ -259,12 +251,9 @@ header .nav-links li:last-child {
   transition: all 0.3s ease;
 }
 
-
 .movie-card:hover .overlay {
-  border: 2px solid #fff	 ;
+  border: 2px solid #fff;
 }
-
-
 
 .movie-card .inner-card-controls {
   display: inline;
@@ -294,13 +283,39 @@ header .nav-links li:last-child {
   margin: 0;
 }
 
-.ctrl-btn:hover {
-  color: var(--secondary);
-  cursor: pointer;
-}
-
 .movie-page .no-movies {
   color: #c4c4c4;
   font-size: 3rem;
   text-align: center;
+}
+
+/*--------------------Dispositivos moveis-----------------*/
+
+@media (max-width: 728px) {
+  header .inner-content {
+    display: flex;
+    flex-direction: column;
+  }
+  header {
+    padding-top: 1rem;
+  }
+
+  .nav-links li {
+    padding-top: 1rem;
+  }
+
+  .btn {
+    line-height: 0.9rem;
+    width: 8rem;
+    text-align: center;
+    hover: none;
+  }
+
+  i .fa-fw .far .fa-eye {
+    visibility: visible;
+  }
+
+  .movie-card .inner-card-controls {
+    opacity: 0.9;
+  }
 }
