--- a/src/App.css
+++ b/src/App.css
@@ -289,7 +289,7 @@ header .nav-links li:last-child {
   text-align: center;
 }
 
-/*--------------------Dispositivos moveis-----------------*/
+/*--------------------Dispositivos moveis------------------*/
 
 @media (max-width: 728px) {
   header .inner-content {
